# CVM_FinancialStatements_DB

./: .env.example  README.md  cvm_downloader.py  database_uploader.py  db_interaction.py  pyproject.toml
unified_cvm_data/: dfp_cia_aberta_2010.csv  dfp_cia_aberta_2011.csv  dfp_cia_aberta_2012.csv  dfp_cia_aberta_2013.csv  dfp_cia_aberta_2014.csv  dfp_cia_aberta_2015.csv  dfp_cia_aberta_2016.csv  dfp_cia_aberta_2017.csv  dfp_cia_aberta_2018.csv  dfp_cia_aberta_2019.csv  dfp_cia_aberta_2020.csv  dfp_cia_aberta_2021.csv  dfp_cia_aberta_2022.csv  dfp_cia_aberta_2023.csv  dfp_cia_aberta_2024.csv  dfp_cia_aberta_BPA_con_2024.csv  dfp_cia_aberta_BPP_con_2024.csv  dfp_cia_aberta_DFC_MI_con_2024.csv  dfp_cia_aberta_DRE_con_2024.csv
