    [tool.poetry]
    name = "cvm-database-creator"
    version = "0.1.0"
    description = ""
    authors = ["PedroDnT <pedrotodescan@gmail.com>"]
    readme = "README.md"
    package-mode = false

    [tool.poetry.dependencies]
    python = "^3.12"
    requests = "^2.32.3"
    bs4 = "^0.0.2"
    tqdm = "^4.66.4"
    pandas = "^2.2.2"
    unidecode = "^1.3.8"


    [build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"